refactor: Simplify ChatService by removing unused methods and improving message persistence logic