@@ -2,505 +2,383 @@ package de.tum.in.www1.hephaestus.mentor;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import de.tum.in.www1.hephaestus.gitprovider.user.User;
 import de.tum.in.www1.hephaestus.intelligenceservice.model.ChatRequest;
 import de.tum.in.www1.hephaestus.intelligenceservice.model.Message;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-import reactor.core.publisher.Flux;
-import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicReference;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import reactor.core.publisher.Flux;
 
 /**
  * Service for handling chat streaming and persistence.
  * Implements full AI SDK Data Stream Protocol support with complete message part persistence.
- * 
+ *
  * Supports all AI SDK frame types:
  * - Text parts (0:) -> TEXT message parts
- * - Reasoning parts (g:) -> REASONING message parts  
- * - Redacted reasoning (i:) -> REASONING_REDACTED message parts
- * - Reasoning signatures (j:) -> REASONING_SIGNATURE message parts
- * - Source citations (h:) -> SOURCE message parts
- * - File attachments (k:) -> FILE message parts
+ * - Reasoning parts (g:) -> REASONING message parts
  * - Data arrays (2:) -> DATA message parts
- * - Annotations (8:) -> ANNOTATION message parts
  * - Error messages (3:) -> ERROR message parts
  * - Tool calls (9:) -> TOOL_INVOCATION message parts
  * - Tool results (a:) -> TOOL_RESULT message parts
- * - Streaming frames (b:, c:) -> logged but not persisted
  * - Control frames (f:, e:, d:) -> handled for flow control
+ *
+ * Others are ignored for now.
  */
 @Service
 public class ChatService {
 
     private static final Logger logger = LoggerFactory.getLogger(ChatService.class);
-    
-    private final IntelligenceServiceWebClient intelligenceServiceWebClient;
-    private final ChatThreadRepository chatThreadRepository;
-    private final ChatMessageRepository chatMessageRepository;
-    private final ObjectMapper objectMapper;
+
+    @Autowired
+    private IntelligenceServiceWebClient intelligenceServiceWebClient;
+
+    @Autowired
+    private ChatThreadRepository chatThreadRepository;
+
+    @Autowired
+    private ChatMessageRepository chatMessageRepository;
+
+    @Autowired
+    private ChatMessagePartRepository chatMessagePartRepository;
+
+    @Autowired
+    private ObjectMapper objectMapper;
 
     @PersistenceContext
     EntityManager entityManager;
 
-    public ChatService(
-            IntelligenceServiceWebClient intelligenceServiceWebClient,
-            ChatThreadRepository chatThreadRepository,
-            ChatMessageRepository chatMessageRepository,
-            ObjectMapper objectMapper) {
-        this.intelligenceServiceWebClient = intelligenceServiceWebClient;
-        this.chatThreadRepository = chatThreadRepository;
-        this.chatMessageRepository = chatMessageRepository;
-        this.objectMapper = objectMapper;
-    }
-
-    /**
-     * Processes a chat request by streaming the response and persisting text parts.
-     * This implements the vertical slice for text message persistence only.
-     */
     public Flux<String> processChat(ChatRequestDTO chatRequest, User user) {
-        logger.info("Processing chat request from user: {} with {} messages", 
-                   user.getLogin(), chatRequest.messages().size());
-        
+        logger.info(
+            "Processing chat request from user: {} with {} messages",
+            user.getLogin(),
+            chatRequest.messages().size()
+        );
+
         try {
             // Find or create thread using the client-provided UUID
             logger.debug("Finding or creating thread with ID: {}", chatRequest.id());
-            ChatThread thread = findOrCreateThreadByClientId(chatRequest.id(), user);
+            ChatThread thread = findOrCreateThread(chatRequest.id(), user);
             logger.debug("Using thread: {} (title={})", thread.getId(), thread.getTitle());
-            
+
             // Persist user messages from the request
             logger.debug("Persisting latest user message");
-            persistLatestUserMessage(chatRequest, thread);
-            
+            var userMessage = persistLatestUserMessage(chatRequest, thread);
+
             // Create ChatRequest for intelligence service
             logger.debug("Creating ChatRequest for intelligence service");
             ChatRequest intelligenceRequest = new ChatRequest();
             intelligenceRequest.setMessages(chatRequest.messages());
-            
+
             // Stream response and persist assistant messages
             logger.debug("Initiating response streaming from intelligence service");
-            return streamAndPersistResponse(intelligenceRequest, thread)
-                    .doOnSubscribe(s -> logger.debug("Chat response stream subscription started"))
-                    .doOnComplete(() -> logger.debug("Chat response stream completed"))
-                    .doOnError(e -> logger.error("Chat response stream error", e))
-                    .doOnCancel(() -> logger.debug("Chat response stream was cancelled"));
+            return streamAndPersistResponse(intelligenceRequest, thread, userMessage)
+                .doOnSubscribe(s -> logger.debug("Chat response stream subscription started"))
+                .doOnComplete(() -> logger.debug("Chat response stream completed"))
+                .doOnError(e -> logger.error("Chat response stream error", e))
+                .doOnCancel(() -> logger.debug("Chat response stream was cancelled"));
         } catch (Exception e) {
             logger.error("Unexpected error in processChat", e);
             return Flux.just(
-                "3:\"An unexpected error occurred. Please try again.\"\n", 
+                "3:\"An unexpected error occurred. Please try again.\"\n",
                 "d:{\"finishReason\":\"error\"}\n"
             );
         }
     }
 
-    /**
-     * Find or create a chat thread using the client-provided ID.
-     * Handles race conditions where multiple requests try to create the same thread.
-     */
-    private ChatThread findOrCreateThreadByClientId(String threadId, User user) {
-        try {
-            UUID threadUuid = UUID.fromString(threadId);
-            
-            // First try to find the thread
-            Optional<ChatThread> existingThread = chatThreadRepository.findByIdAndUser(threadUuid, user);
-            if (existingThread.isPresent()) {
-                return existingThread.get();
-            }
-            
-            // If thread doesn't exist, try to create it
-            ChatThread newThread = new ChatThread();
-            newThread.setId(threadUuid);
-            newThread.setUser(user);
-            newThread.setTitle("New chat");
-            
-            try {
-                // Try to save the thread
-                return chatThreadRepository.save(newThread);
-            } catch (Exception e) {
-                // If saving fails (likely due to concurrent creation), try to find it again
-                logger.debug("Exception while creating thread with ID {}. Attempting to retrieve it.", threadId);
-                return chatThreadRepository.findByIdAndUser(threadUuid, user)
-                        .orElseGet(() -> {
-                            // If still not found, create a new thread with a different ID
-                            logger.warn("Failed to create thread with ID {}. Creating with new ID.", threadId);
-                            ChatThread fallbackThread = new ChatThread();
-                            fallbackThread.setUser(user);
-                            fallbackThread.setTitle("New chat");
-                            return chatThreadRepository.save(fallbackThread);
-                        });
-            }
-        } catch (IllegalArgumentException e) {
-            logger.warn("Invalid thread UUID format: {}, creating new thread", threadId);
-            ChatThread newThread = new ChatThread();
-            newThread.setUser(user);
-            newThread.setTitle("New chat");
-            return chatThreadRepository.save(newThread);
+    private ChatThread findOrCreateThread(String threadId, User user) {
+        UUID threadUuid = UUID.fromString(threadId);
+
+        // First try to find the thread
+        Optional<ChatThread> existingThread = chatThreadRepository.findByIdAndUser(threadUuid, user);
+        if (existingThread.isPresent()) {
+            return existingThread.get();
         }
+
+        // If thread doesn't exist, try to create it
+        ChatThread newThread = new ChatThread();
+        newThread.setId(threadUuid);
+        newThread.setUser(user);
+        newThread.setTitle("New chat");
+
+        return chatThreadRepository.save(newThread);
     }
 
-    /**
-     * Persist user message from the chat request.
-     */
-    private void persistLatestUserMessage(ChatRequestDTO chatRequest, ChatThread thread) {
-        if (!chatRequest.messages().isEmpty()) {
-            Message lastUserMessage = chatRequest.messages().get(chatRequest.messages().size() - 1);
-            Optional<Message> parentMessage = chatRequest.messages().size() > 1
-                ? Optional.of(chatRequest.messages().get(chatRequest.messages().size() - 2))
-                : Optional.empty();
-            if ("user".equals(lastUserMessage.getRole())) {
-                persistMessage(lastUserMessage, parentMessage, thread, ChatMessage.Role.USER);
+    private ChatMessage persistLatestUserMessage(ChatRequestDTO chatRequest, ChatThread thread) {
+        Message apiMessage = chatRequest.messages().getLast();
+        Optional<Message> parentApiMessage = chatRequest.messages().size() > 1
+            ? Optional.of(chatRequest.messages().get(chatRequest.messages().size() - 2))
+            : Optional.empty();
+
+        ChatMessage message = new ChatMessage();
+        message.setRole(ChatMessage.Role.USER);
+        message.setThread(thread);
+
+        UUID messageId = UUID.fromString(apiMessage.getId());
+        message.setId(messageId);
+
+        // Set parent message if available
+        if (parentApiMessage.isPresent()) {
+            UUID parentId = UUID.fromString(parentApiMessage.get().getId());
+            chatMessageRepository
+                .findById(parentId)
+                .ifPresentOrElse(message::setParentMessage, () ->
+                    logger.warn("Could not find parent message with ID: {}", parentId)
+                );
+        }
+
+        // First save the message to get an ID
+        ChatMessage savedMessage = chatMessageRepository.save(message);
+        thread.addMessage(savedMessage);
+        thread.setSelectedLeafMessage(savedMessage);
+
+        // Now prepare message parts using the saved message ID
+        if (apiMessage.getParts() != null) {
+            int partIndex = savedMessage.getParts().size();
+            for (var part : apiMessage.getParts()) {
+                if ("text".equals(part.getType()) && part.getText() != null) {
+                    ChatMessagePart textPart = new ChatMessagePart();
+                    textPart.setId(new ChatMessagePartId(savedMessage.getId(), partIndex++));
+                    textPart.setType(ChatMessagePart.MessagePartType.TEXT);
+
+                    JsonNode contentNode = objectMapper.valueToTree(part.getText());
+                    textPart.setContent(contentNode);
+                    savedMessage.addMessagePart(textPart);
+                }
             }
         }
+
+        // Save the message again with its parts
+        chatMessageRepository.save(savedMessage);
+        chatThreadRepository.save(thread);
+
+        logger.debug("Persisted user message: {} with {} parts", savedMessage.getId(), savedMessage.getParts().size());
+
+        return savedMessage;
     }
 
-    private Flux<String> streamAndPersistResponse(ChatRequest intelligenceRequest, ChatThread thread) {
-        logger.debug("Setting up response streaming for thread: {}", thread.getId());
-        
+    private Flux<String> streamAndPersistResponse(
+        ChatRequest intelligenceRequest,
+        ChatThread thread,
+        ChatMessage userMessage
+    ) {
+        logger.debug(
+            "Setting up response streaming for thread: {} and user message: {}",
+            thread.getId(),
+            userMessage.getId()
+        );
+
         // References to track the assistant message being built
-        AtomicReference<ChatMessage> currentAssistantMessage = new AtomicReference<>();
-        AtomicReference<StringBuilder> textContentBuilder = new AtomicReference<>(new StringBuilder());
-        AtomicReference<StringBuilder> reasoningContentBuilder = new AtomicReference<>(new StringBuilder());
+        AtomicReference<ChatMessage> assistantMessage = new AtomicReference<>();
+        AtomicReference<StringBuilder> contentBuilder = new AtomicReference<>(new StringBuilder());
         AtomicReference<Integer> partIndex = new AtomicReference<>(0);
+        AtomicReference<Character> lastFrameType = new AtomicReference<>('f');
 
-        return intelligenceServiceWebClient.streamChat(intelligenceRequest)
-                .doOnSubscribe(s -> logger.debug("Subscribed to intelligence service stream"))
-                .doOnNext(chunk -> {
-                    logger.debug("Received chunk from intelligence service: {}", chunk);
-                    try {
-                        processStreamFrame(chunk, thread, currentAssistantMessage, 
-                                                textContentBuilder, reasoningContentBuilder, partIndex);
-                    } catch (Exception e) {
-                        logger.error("Error processing stream chunk: {}", chunk, e);
-                    }
-                })
-                .doOnComplete(() -> {
-                    logger.debug("Intelligence service stream completed");
-                    // Finalize the assistant message
-                    ChatMessage assistantMessage = currentAssistantMessage.get();
-                    if (assistantMessage != null) {
-                        // Save final text content if any
-                        String finalTextContent = textContentBuilder.get().toString();
-                        String finalReasoningContent = reasoningContentBuilder.get().toString();
-                        
-                        if (!finalTextContent.isEmpty()) {
-                            logger.debug("Saving final text content: {} chars", finalTextContent.length());
-                            saveFinalTextPart(assistantMessage, finalTextContent, partIndex.get());
-                        } else {
-                            logger.debug("No final text content to save");
-                        }
-                        
-                        if (!finalReasoningContent.isEmpty()) {
-                            logger.debug("Saving final reasoning content: {} chars", finalReasoningContent.length());
-                            saveMessagePart(assistantMessage, ChatMessagePart.MessagePartType.REASONING, 
-                                          finalReasoningContent, partIndex.get());
-                        } else {
-                            logger.debug("No final reasoning content to save");
-                        }
-                        
-                        // Update thread's selected leaf message
-                        logger.debug("Finalizing thread with assistant message: {}", assistantMessage.getId());
-                        finalizeThread(thread, assistantMessage);
-                        
-                        logger.info("Completed processing chat for thread: {}", thread.getId());
-                    } else {
-                        logger.warn("Stream completed but no assistant message was created");
-                    }
-                })
-                .doOnError(error -> {
-                    logger.error("Error in chat stream processing", error);
-                })
-                .onErrorResume(error -> {
-                    logger.error("Recovering from stream error", error);
-                    return Flux.just(
-                        "3:\"An error occurred while processing your request. Please try again.\"\n",
-                        "d:{\"finishReason\":\"error\"}\n"
+        return intelligenceServiceWebClient
+            .streamChat(intelligenceRequest)
+            .doOnSubscribe(s -> logger.debug("Subscribed to intelligence service stream"))
+            .doOnNext(chunk -> {
+                logger.debug("Received chunk from intelligence service: {}", chunk);
+                try {
+                    processStreamFrame(
+                        chunk,
+                        thread,
+                        userMessage,
+                        assistantMessage,
+                        contentBuilder,
+                        partIndex,
+                        lastFrameType
                     );
-                });
+                    lastFrameType.set(chunk.charAt(0)); // Update last frame type for next processing
+                } catch (Exception e) {
+                    logger.error("Error processing stream chunk: {}", chunk, e);
+                }
+            })
+            .doOnComplete(() -> {
+                logger.debug("Intelligence service stream completed");
+                chatMessageRepository.save(assistantMessage.get());
+            })
+            .doOnError(error -> {
+                logger.error("Error in chat stream processing", error);
+            })
+            .onErrorResume(error -> {
+                logger.error("Recovering from stream error", error);
+                return Flux.just(
+                    "3:\"An error occurred while processing your request. Please try again.\"\n",
+                    "d:{\"finishReason\":\"error\"}\n"
+                );
+            });
     }
 
-    private void processStreamFrame(String frame, ChatThread thread, 
-                                    AtomicReference<ChatMessage> currentAssistantMessage,
-                                    AtomicReference<StringBuilder> textContentBuilder,
-                                    AtomicReference<StringBuilder> reasoningContentBuilder,
-                                    AtomicReference<Integer> textPartIndex) {
+    private void processStreamFrame(
+        String frame,
+        ChatThread thread,
+        ChatMessage userMessage,
+        AtomicReference<ChatMessage> assistantMessage,
+        AtomicReference<StringBuilder> contentBuilder,
+        AtomicReference<Integer> partIndex,
+        AtomicReference<Character> lastFrameType
+    ) {
         try {
             // Parse AI SDK frame format: "type:content"
             if (!frame.contains(":")) {
                 logger.warn("Invalid frame format (missing colon separator): {}", frame);
                 return;
             }
-            
+
             String frameType = frame.substring(0, frame.indexOf(":"));
             String frameContent = frame.substring(frame.indexOf(":") + 1);
-            
-            logger.debug("Processing frame type: {} with content length: {}", 
-                       frameType, frameContent != null ? frameContent.length() : 0);
-            
+            JsonNode frameNode = objectMapper.readTree(frameContent);
+
+            logger.debug(
+                "Processing frame type: {} with content length: {}",
+                frameType,
+                frameContent != null ? frameContent.length() : 0
+            );
+
             // Handle different frame types based on AI SDK protocol
             switch (frameType) {
                 case "f": // start_step - initialize assistant message
                     logger.debug("Frame: start_step received");
-                    
-                    // Extract the messageId from the frame content if available
-                    String messageId = null;
-                    try {
-                        if (frameContent != null && !frameContent.isEmpty()) {
-                            JsonNode frameNode = objectMapper.readTree(frameContent);
-                            if (frameNode.has("messageId")) {
-                                messageId = frameNode.get("messageId").asText();
-                                logger.debug("Extracted message ID from frame: {}", messageId);
-                            }
-                        }
-                    } catch (Exception e) {
-                        logger.warn("Error parsing messageId from start_step frame: {}", frameContent, e);
+                    UUID messageId = UUID.fromString(frameNode.get("messageId").asText());
+
+                    // Always create a new assistant message (if one already exists, it will be replaced)
+                    ChatMessage message = new ChatMessage();
+                    message.setRole(ChatMessage.Role.ASSISTANT);
+                    message.setThread(thread);
+                    message.setId(messageId);
+                    message.setParentMessage(userMessage);
+                    thread.setSelectedLeafMessage(message);
+                    chatThreadRepository.save(thread);
+
+                    // Replace the existing assistant message if it exists
+                    if (assistantMessage.get() != null) {
+                        ChatMessage oldMessage = assistantMessage.get();
+                        logger.debug(
+                            "Replacing existing assistant message: {} with new one: {}",
+                            oldMessage.getId(),
+                            messageId
+                        );
+
+                        // Transfer parts from old message to new one
+                        oldMessage
+                            .getParts()
+                            .forEach(part -> {
+                                part.setMessage(message);
+                            });
+                        message.setCreatedAt(oldMessage.getCreatedAt());
+                        assistantMessage.set(chatMessageRepository.save(message));
+                        chatMessageRepository.delete(oldMessage);
                     }
-                    
-                    // Start of a new reasoning step
-                    if (currentAssistantMessage.get() == null) {
-                        // Create assistant message with the extracted ID
-                        ChatMessage assistantMessage = createAssistantMessage(thread, messageId);
-                        currentAssistantMessage.set(assistantMessage);
-                        textContentBuilder.set(new StringBuilder());
-                        reasoningContentBuilder.set(new StringBuilder());
-                        textPartIndex.set(0);
-                        logger.debug("Started new assistant message: {}", assistantMessage.getId());
-                    } else {
-                        // If continuing from a previous step, flush any existing content
-                        String currentContent = textContentBuilder.get().toString();
-                        String currentReasoning = reasoningContentBuilder.get().toString();
-                        
-                        if (!currentContent.isEmpty()) {
-                            logger.debug("Flushing existing text content: {} chars", currentContent.length());
-                            saveFinalTextPart(currentAssistantMessage.get(), currentContent, textPartIndex.get());
-                            textPartIndex.set(textPartIndex.get() + 1);
-                            textContentBuilder.set(new StringBuilder());
-                        }
-                        
-                        if (!currentReasoning.isEmpty()) {
-                            logger.debug("Flushing existing reasoning content: {} chars", currentReasoning.length());
-                            saveMessagePart(currentAssistantMessage.get(), ChatMessagePart.MessagePartType.REASONING, 
-                                          currentReasoning, textPartIndex.get());
-                            textPartIndex.set(textPartIndex.get() + 1);
-                            reasoningContentBuilder.set(new StringBuilder());
-                        }
-                        logger.debug("Started new step in existing message: {}", currentAssistantMessage.get().getId());
-                    }
+
+                    // Initialize text/reasoning content builders
+                    contentBuilder.set(new StringBuilder());
                     break;
-                    
                 case "0": // text content
-                    logger.debug("Frame: text content received");
-                    // Text content streaming - append to current buffer
-                    ChatMessage assistantMessage = currentAssistantMessage.get();
-                    String textContent = objectMapper.readTree(frameContent).asText();
-                    if (assistantMessage != null) {
-                        // Remove quotes from JSON string content
-                        textContentBuilder.get().append(textContent);
-                        logger.debug("Added text content: {} chars to message: {}", 
-                                   textContent.length(), assistantMessage.getId());
-                    } else {
-                        // Text content arrived before start_step, create message first
-                        logger.debug("Text content arrived before start_step, creating new message");
-                        assistantMessage = createAssistantMessage(thread, null);
-                        currentAssistantMessage.set(assistantMessage);
-                        textContentBuilder.set(new StringBuilder(textContent));
-                        textPartIndex.set(0);
-                        logger.debug("Created assistant message for unexpected text content: {}", 
-                                   assistantMessage.getId());
+                    if (lastFrameType.get() == 'g') { // Save reasoning
+                        // If reasoning content exists, save it
+                        saveMessagePart(
+                            assistantMessage.get(),
+                            ChatMessagePart.MessagePartType.REASONING,
+                            contentBuilder.get().toString(),
+                            partIndex.get()
+                        );
+                        partIndex.set(partIndex.get() + 1);
+                        contentBuilder.set(new StringBuilder());
                     }
+                    contentBuilder.get().append(frameNode.asText());
                     break;
-                    
                 case "e": // finish_step
-                    logger.debug("Frame: finish_step received");
-                    // End of current reasoning step, potentially with a continuation flag
-                    boolean isContinued = false;
-                    try {
-                        // Parse continuation flag if present
-                        if (frameContent != null && !frameContent.isEmpty()) {
-                            logger.debug("Parsing finish_step data: {}", frameContent);
-                            var finishStepData = objectMapper.readValue(frameContent, Object.class);
-                            if (finishStepData instanceof Map) {
-                                @SuppressWarnings("unchecked")
-                                var dataMap = (Map<String, Object>) finishStepData;
-                                isContinued = Boolean.TRUE.equals(dataMap.get("isContinued"));
-                                logger.debug("Finish step with isContinued={}", isContinued);
-                            }
-                        }
-                    } catch (Exception e) {
-                        logger.warn("Error parsing finish_step data: {}", frameContent, e);
-                    }
-                    
-                    // If not continued, flush content
-                    if (!isContinued && currentAssistantMessage.get() != null) {
-                        String currentContent = textContentBuilder.get().toString();
-                        String currentReasoning = reasoningContentBuilder.get().toString();
-                        
-                        if (!currentContent.isEmpty()) {
-                            logger.debug("Flushing text content at finish_step: {} chars", currentContent.length());
-                            saveFinalTextPart(currentAssistantMessage.get(), currentContent, textPartIndex.get());
-                            textPartIndex.set(textPartIndex.get() + 1);
-                            textContentBuilder.set(new StringBuilder());
-                        }
-                        
-                        if (!currentReasoning.isEmpty()) {
-                            logger.debug("Flushing reasoning content at finish_step: {} chars", currentReasoning.length());
-                            saveMessagePart(currentAssistantMessage.get(), ChatMessagePart.MessagePartType.REASONING, 
-                                          currentReasoning, textPartIndex.get());
-                            textPartIndex.set(textPartIndex.get() + 1);
-                            reasoningContentBuilder.set(new StringBuilder());
-                        }
-                        
-                        logger.debug("Finished step, content flushed");
-                    } else {
-                        logger.debug("Finished step with continuation, content not flushed");
+                    // if g or 0 was the last frame, we need to save the content
+                    if (lastFrameType.get() == '0' || lastFrameType.get() == 'g') {
+                        saveMessagePart(
+                            assistantMessage.get(),
+                            lastFrameType.get() == '0'
+                                ? ChatMessagePart.MessagePartType.TEXT
+                                : ChatMessagePart.MessagePartType.REASONING,
+                            contentBuilder.get().toString(),
+                            partIndex.get()
+                        );
+                        partIndex.set(partIndex.get() + 1);
+                        contentBuilder.set(new StringBuilder());
                     }
                     break;
-                    
                 case "d": // finish_message
-                    logger.debug("Frame: finish_message received");
                     // Message is complete - any metadata like finish reason is in the content
-                    String finishReason = "stop"; // Default
-                    try {
-                        if (frameContent != null && !frameContent.isEmpty()) {
-                            logger.debug("Parsing finish_message data: {}", frameContent);
-                            var finishData = objectMapper.readValue(frameContent, Object.class);
-                            if (finishData instanceof java.util.Map) {
-                                @SuppressWarnings("unchecked")
-                                var dataMap = (java.util.Map<String, Object>) finishData;
-                                if (dataMap.containsKey("finishReason")) {
-                                    finishReason = String.valueOf(dataMap.get("finishReason"));
-                                }
-                            }
-                        }
-                    } catch (Exception e) {
-                        logger.warn("Error parsing finish_message data: {}", frameContent, e);
-                    }
+                    String finishReason = frameNode.get("finishReason").asText("unknown");
                     logger.debug("Message finished with reason: {}", finishReason);
                     break;
-                    
                 case "g": // reasoning content
-                    logger.debug("Frame: reasoning content received");
-                    if (currentAssistantMessage.get() != null) {
-                        String reasoningContent = objectMapper.readTree(frameContent).asText();
-                        // Accumulate reasoning content like text content
-                        reasoningContentBuilder.get().append(reasoningContent);
-                        logger.debug("Added reasoning content: {} chars to message: {}", 
-                                   reasoningContent.length(), currentAssistantMessage.get().getId());
-                    }
+                    contentBuilder.get().append(frameNode.asText());
                     break;
-                    
                 case "i": // redacted reasoning
-                    logger.debug("Frame: redacted reasoning received");
-                    if (currentAssistantMessage.get() != null) {
-                        JsonNode redactedData = objectMapper.readTree(frameContent);
-                        saveMessagePart(currentAssistantMessage.get(), ChatMessagePart.MessagePartType.REASONING_REDACTED, 
-                                      redactedData, textPartIndex.get());
-                        textPartIndex.set(textPartIndex.get() + 1);
-                        logger.debug("Saved redacted reasoning part for message: {}", currentAssistantMessage.get().getId());
-                    }
+                    logger.warn("Frame: redacted reasoning received, skipping content");
                     break;
-                    
                 case "j": // reasoning signature
-                    logger.debug("Frame: reasoning signature received");
-                    if (currentAssistantMessage.get() != null) {
-                        JsonNode signatureData = objectMapper.readTree(frameContent);
-                        saveMessagePart(currentAssistantMessage.get(), ChatMessagePart.MessagePartType.REASONING_SIGNATURE, 
-                                      signatureData, textPartIndex.get());
-                        textPartIndex.set(textPartIndex.get() + 1);
-                        logger.debug("Saved reasoning signature part for message: {}", currentAssistantMessage.get().getId());
-                    }
+                    logger.warn("Frame: reasoning signature received, skipping content");
                     break;
-                    
                 case "h": // source citation
-                    logger.debug("Frame: source citation received");
-                    if (currentAssistantMessage.get() != null) {
-                        JsonNode sourceData = objectMapper.readTree(frameContent);
-                        saveMessagePart(currentAssistantMessage.get(), ChatMessagePart.MessagePartType.SOURCE, 
-                                      sourceData, textPartIndex.get());
-                        textPartIndex.set(textPartIndex.get() + 1);
-                        logger.debug("Saved source part for message: {}", currentAssistantMessage.get().getId());
-                    }
+                    logger.warn("Frame: source citation received, skipping content");
                     break;
-                    
                 case "k": // file attachment
-                    logger.debug("Frame: file attachment received");
-                    if (currentAssistantMessage.get() != null) {
-                        JsonNode fileData = objectMapper.readTree(frameContent);
-                        saveMessagePart(currentAssistantMessage.get(), ChatMessagePart.MessagePartType.FILE, 
-                                      fileData, textPartIndex.get());
-                        textPartIndex.set(textPartIndex.get() + 1);
-                        logger.debug("Saved file part for message: {}", currentAssistantMessage.get().getId());
-                    }
+                    logger.warn("Frame: file attachment received, skipping content");
                     break;
-                    
                 case "2": // data array
-                    logger.debug("Frame: data array received");
-                    if (currentAssistantMessage.get() != null) {
-                        JsonNode dataArray = objectMapper.readTree(frameContent);
-                        saveMessagePart(currentAssistantMessage.get(), ChatMessagePart.MessagePartType.DATA, 
-                                      dataArray, textPartIndex.get());
-                        textPartIndex.set(textPartIndex.get() + 1);
-                        logger.debug("Saved data part for message: {}", currentAssistantMessage.get().getId());
-                    }
+                    logger.warn("Frame: data array received, skipping content");
                     break;
-                    
                 case "8": // message annotations
-                    logger.debug("Frame: message annotations received");
-                    if (currentAssistantMessage.get() != null) {
-                        JsonNode annotations = objectMapper.readTree(frameContent);
-                        saveMessagePart(currentAssistantMessage.get(), ChatMessagePart.MessagePartType.ANNOTATION, 
-                                      annotations, textPartIndex.get());
-                        textPartIndex.set(textPartIndex.get() + 1);
-                        logger.debug("Saved annotation part for message: {}", currentAssistantMessage.get().getId());
-                    }
+                    logger.warn("Frame: message annotations received, skipping content");
                     break;
-                    
                 case "3": // error message
-                    logger.debug("Frame: error message received");
-                    if (currentAssistantMessage.get() != null) {
-                        String errorContent = objectMapper.readTree(frameContent).asText();
-                        saveMessagePart(currentAssistantMessage.get(), ChatMessagePart.MessagePartType.ERROR, 
-                                      errorContent, textPartIndex.get());
-                        textPartIndex.set(textPartIndex.get() + 1);
-                        logger.debug("Saved error part for message: {}", currentAssistantMessage.get().getId());
-                    }
+                    logger.warn("Frame: error message received, skipping content");
                     break;
-                    
                 case "9": // tool call (complete)
-                    logger.debug("Frame: tool call received");
-                    if (currentAssistantMessage.get() != null) {
-                        JsonNode toolCall = objectMapper.readTree(frameContent);
-                        saveMessagePart(currentAssistantMessage.get(), ChatMessagePart.MessagePartType.TOOL_INVOCATION, 
-                                      toolCall, textPartIndex.get());
-                        textPartIndex.set(textPartIndex.get() + 1);
-                        logger.debug("Saved tool invocation part for message: {}", currentAssistantMessage.get().getId());
+                    // if g or 0 was the last frame, we need to save the content
+                    if (lastFrameType.get() == '0' || lastFrameType.get() == 'g') {
+                        saveMessagePart(
+                            assistantMessage.get(),
+                            lastFrameType.get() == '0'
+                                ? ChatMessagePart.MessagePartType.TEXT
+                                : ChatMessagePart.MessagePartType.REASONING,
+                            contentBuilder.get().toString(),
+                            partIndex.get()
+                        );
+                        partIndex.set(partIndex.get() + 1);
+                        contentBuilder.set(new StringBuilder());
                     }
+
+                    // Create a new tool invocation part
+                    saveMessagePart(assistantMessage.get(), ChatMessagePart.MessagePartType.TOOL_INVOCATION, frameNode, partIndex.get());
+                    partIndex.set(partIndex.get() + 1);
                     break;
-                    
                 case "a": // tool result
-                    logger.debug("Frame: tool result received");
-                    if (currentAssistantMessage.get() != null) {
-                        JsonNode toolResult = objectMapper.readTree(frameContent);
-                        saveMessagePart(currentAssistantMessage.get(), ChatMessagePart.MessagePartType.TOOL_RESULT, 
-                                      toolResult, textPartIndex.get());
-                        textPartIndex.set(textPartIndex.get() + 1);
-                        logger.debug("Saved tool result part for message: {}", currentAssistantMessage.get().getId());
+                    JsonNode toolResult = frameNode.get("result");
+                    Optional<ChatMessagePart> lastPart = assistantMessage.get().getParts().stream()
+                        .filter(part -> part.getType() == ChatMessagePart.MessagePartType.TOOL_INVOCATION)
+                        .reduce((first, second) -> second); // Get the last tool invocation part
+                    if (lastPart.isPresent()) {
+                        var content = (ObjectNode) lastPart.get().getContent();
+                        content.set("result", toolResult);
+                        lastPart.get().setContent(content);
+                        chatMessagePartRepository.save(lastPart.get());
+                    } else {
+                        logger.warn("No tool invocation part found to attach result to");
                     }
                     break;
-                    
                 case "b": // tool call streaming start (streaming only - don't persist)
                     logger.debug("Frame: tool call streaming start (not persisted): {}", frameContent);
                     break;
-                    
                 case "c": // tool call delta (streaming only - don't persist)
                     logger.debug("Frame: tool call delta (not persisted): {}", frameContent);
                     break;
-                    
                 default:
                     logger.warn("Unknown frame type: {}", frameType);
                     break;
@@ -511,77 +389,21 @@ public class ChatService {
     }
 
     /**
-     * Create an assistant message in the database with a specific ID.
-     * 
-     * @param thread The chat thread to which the message belongs
-     * @param messageId The ID to use for the message, or null to generate one
-     * @return The saved chat message
-     */
-    private ChatMessage createAssistantMessage(ChatThread thread, String messageId) {
-        ChatMessage message = new ChatMessage();
-        message.setRole(ChatMessage.Role.ASSISTANT);
-        message.setThread(thread);
-        
-        // Set the ID if provided, otherwise generate one
-        if (messageId != null && !messageId.isEmpty()) {
-            try {
-                UUID id = UUID.fromString(messageId);
-                message.setId(id);
-                logger.debug("Using provided ID for assistant message: {}", id);
-            } catch (IllegalArgumentException e) {
-                logger.warn("Invalid UUID format for message ID: {}, will use generated ID", messageId);
-                message.setId(UUID.randomUUID());
-            }
-        } else {
-            message.setId(UUID.randomUUID());
-        }
-        
-        ChatMessage savedMessage = chatMessageRepository.save(message);
-        thread.addMessage(savedMessage);
-        
-        logger.debug("Created assistant message: {}", savedMessage.getId());
-        return savedMessage;
-    }
-
-    /**
-     * Saves the final text part for a message.
-     * This is called after the streaming is complete to save the accumulated text.
-     */
-    @Transactional
-    private void saveFinalTextPart(ChatMessage message, String textContent, int partIndex) {
-        try {
-            ChatMessagePart textPart = new ChatMessagePart();
-            textPart.setId(new ChatMessagePartId(message.getId(), partIndex));
-            textPart.setType(ChatMessagePart.MessagePartType.TEXT);
-            
-            // Store text content as JSON string
-            JsonNode contentNode = objectMapper.valueToTree(textContent);
-            textPart.setContent(contentNode);
-            
-            // Add to message (don't save individually)
-            message.addMessagePart(textPart);
-            
-            // Save the message which will cascade to the part
-            chatMessageRepository.save(message);
-            
-            logger.debug("Saved text part for message: {} with {} chars", 
-                        message.getId(), textContent.length());
-        } catch (Exception e) {
-            logger.error("Error saving final text part: {}", e.getMessage(), e);
-        }
-    }
-
-    /**
      * Helper method to save a message part with proper content handling.
      * Handles both String content and JsonNode content.
      */
     @Transactional
-    private void saveMessagePart(ChatMessage message, ChatMessagePart.MessagePartType type, Object content, int partIndex) {
+    private void saveMessagePart(
+        ChatMessage message,
+        ChatMessagePart.MessagePartType type,
+        Object content,
+        int partIndex
+    ) {
         try {
             ChatMessagePart messagePart = new ChatMessagePart();
             messagePart.setId(new ChatMessagePartId(message.getId(), partIndex));
             messagePart.setType(type);
-            
+
             // Convert content to JsonNode based on type
             JsonNode contentNode;
             if (content instanceof String) {
@@ -591,107 +413,18 @@ public class ChatService {
             } else {
                 contentNode = objectMapper.valueToTree(content);
             }
-            
+
             messagePart.setContent(contentNode);
-            
+
             // Add to message (don't save individually)
             message.addMessagePart(messagePart);
-            
+
             // Save the message which will cascade to the part
             chatMessageRepository.save(message);
-            
-            logger.debug("Saved {} part for message: {} at index: {}", 
-                        type, message.getId(), partIndex);
+
+            logger.debug("Saved {} part for message: {} at index: {}", type, message.getId(), partIndex);
         } catch (Exception e) {
             logger.error("Error saving message part of type {}: {}", type, e.getMessage(), e);
-        }
-    }
-
-    /**
-     * Persist a message and its parts from the AI SDK.
-     */
-    @Transactional
-    private ChatMessage persistMessage(Message apiMessage, Optional<Message> parentApiMessage, ChatThread thread, ChatMessage.Role role) {
-        ChatMessage message = new ChatMessage();
-        message.setRole(role);
-        message.setThread(thread);
-        
-        // Set message ID from API message if available, otherwise generate a new one
-        if (apiMessage.getId() != null && !apiMessage.getId().isEmpty()) {
-            try {
-                UUID id = UUID.fromString(apiMessage.getId());
-                message.setId(id);
-                logger.debug("Using API message ID: {}", id);
-            } catch (IllegalArgumentException e) {
-                logger.warn("Invalid UUID format for API message ID: {}, will use generated ID", apiMessage.getId());
-                message.setId(UUID.randomUUID());
-            }
-        } else {
-            message.setId(UUID.randomUUID());
-        }
-        
-        // Set parent message if available
-        if (parentApiMessage.isPresent()) {
-            try {
-                UUID parentId = UUID.fromString(parentApiMessage.get().getId());
-                ChatMessage parentMessage = chatMessageRepository.findById(parentId).orElse(null);
-                if (parentMessage != null) {
-                    message.setParentMessage(parentMessage);
-                } else {
-                    logger.warn("Could not find parent message with ID: {}", parentId);
-                }
-            } catch (IllegalArgumentException e) {
-                logger.warn("Invalid UUID format for parent message ID: {}", parentApiMessage.get().getId());
-            }
-        }
-
-        // First save the message to get an ID
-        ChatMessage savedMessage = chatMessageRepository.save(message);
-        
-        // Now prepare message parts using the saved message ID
-        if (apiMessage.getParts() != null) {
-            int partIndex = 0;
-            for (var part : apiMessage.getParts()) {
-                if ("text".equals(part.getType()) && part.getText() != null) {
-                    try {
-                        ChatMessagePart textPart = new ChatMessagePart();
-                        textPart.setId(new ChatMessagePartId(savedMessage.getId(), partIndex++));
-                        textPart.setType(ChatMessagePart.MessagePartType.TEXT);
-                        
-                        JsonNode contentNode = objectMapper.valueToTree(part.getText());
-                        textPart.setContent(contentNode);
-                        savedMessage.addMessagePart(textPart);
-                    } catch (Exception e) {
-                        logger.error("Error preparing text part for message: {}", e.getMessage(), e);
-                    }
-                }
-            }
-        }
-        
-        // Save the message again with its parts
-        savedMessage = chatMessageRepository.save(savedMessage);
-        
-        // Update thread references
-        thread.addMessage(savedMessage);
-        thread.setSelectedLeafMessage(savedMessage);
-        chatThreadRepository.save(thread);
-        
-        logger.debug("Persisted {} message: {} with {} parts", 
-                    role, savedMessage.getId(), savedMessage.getParts().size());
-        return savedMessage;
-    }
-
-    /**
-     * Updates the thread with the final assistant message and saves it.
-     */
-    @Transactional
-    private void finalizeThread(ChatThread thread, ChatMessage assistantMessage) {
-        try {
-            thread.setSelectedLeafMessage(assistantMessage);
-            chatThreadRepository.save(thread);
-            logger.debug("Finalized thread with selected leaf message: {}", assistantMessage.getId());
-        } catch (Exception e) {
-            logger.error("Error finalizing thread: {}", e.getMessage(), e);
         }
     }
 }
